@@ -1060,3 +1060,105 @@ isprimeAPRCL(GEN N)
   GEN res = aprcl(N);
   avma = av; return (typ(res) == t_INT);
 }
+
+static void
+set_add(hashtable *H, void *d)
+{
+  ulong h = H->hash(d);
+  if (!hash_search2(H, d, h)) hash_insert2(H, d, NULL, h);
+}
+static GEN
+GEN_hash_keys(hashtable *H)
+{ GEN v = hash_keys(H); settyp(v, t_VEC); return ZV_sort(v); }
+static void
+add(hashtable *H, GEN t1, GEN t2, GEN a, GEN b, GEN r, GEN s)
+{
+  GEN ra, qa = dvmdii(t1, a, &ra);
+  if (signe(ra)) return;
+  if (!dvdii(t2, b)) return;
+  if (equalii(modii(qa, s), r)) set_add(H, (void*)qa);
+}
+/* T^2 - B*T + C has integer roots ? */
+static void
+check_t(hashtable *H, GEN B, GEN C, GEN a, GEN b, GEN r, GEN rp, GEN s)
+{
+  GEN d, t1, t2, D = subii(sqri(B), shifti(C, 2));
+  if (!Z_issquareall(D, &d)) return;
+  t1 = shifti(addii(B, d), -1);
+  t2 = subii(B, t1);
+  add(H, t1,t2, a,b,r,s);
+  add(H, t2,t1, a,b,r,s);
+}
+/* N > s > r >= 0, (r,s) = 1 */
+GEN
+divisorslenstra(GEN N, GEN r, GEN s)
+{
+  pari_sp av = avma;
+  GEN u, Ns2, rp, a0, a1, b0, b1, c0, c1, s2;
+  hashtable *H = hash_create(11, (ulong(*)(void*))&hash_GEN,
+                                 (int(*)(void*,void*))&equalii, 1);
+  long j;
+  if (typ(N) != t_INT) pari_err_TYPE("Lenstradiv", N);
+  if (typ(r) != t_INT) pari_err_TYPE("Lenstradiv", r);
+  if (typ(s) != t_INT) pari_err_TYPE("Lenstradiv", s);
+  u = Fp_inv(r, s);
+  rp = Fp_mul(u, N, s); /* r' */
+  s2 = sqri(s);
+  a0 = s;
+  b0 = gen_0;
+  c0 = gen_0;
+  if (dvdii(N, r)) set_add(H, (void*)r); /* case i = 0 */
+  a1 = Fp_mul(u, rp, s); if (!signe(a1)) a1 = s; /* 0 < a1 <= s */
+  b1 = gen_1;
+  c1 = Fp_mul(u, diviiexact(subii(N,mulii(r,rp)), s), s);
+  Ns2 = divii(N, s2);
+  j = 1;
+  for (;;)
+  {
+    GEN C, q, c, ab = mulii(a1,b1);
+    long i, lC;
+    if (j == 0) /* i even */
+      C = signe(c1)? mkvec2(subii(c1,s), c1): mkvec(gen_0);
+    else
+    { /* i odd */
+      GEN X = shifti(ab,1);
+      c = c1;
+      /* smallest c >= 2ab, c = c1 (mod s) */
+      if (cmpii(c, X) < 0) c = addii(c, mulii(s, gceil(gdiv(subii(X,c),s))));
+      C = (cmpii(c, addii(Ns2,ab)) <= 0)? mkvec(c): cgetg(1,t_VEC);
+    }
+    lC = lg(C);
+    if (!signe(a1))
+    {
+      for (i = 1; i < lC; i++)
+      {
+        GEN ry, c = gel(C,i), y = dvmdii(c, b1, &ry);
+        if (!signe(ry))
+        {
+          GEN d = dvmdii(N, addii(mulii(y,s), rp), &ry);
+          if (!signe(ry)) set_add(H, (void*)d);
+        }
+      }
+      break; /* DONE */
+    }
+    else
+    {
+      GEN abN = mulii(ab, N);
+      GEN B = addii(mulii(a1,r), mulii(b1,rp));
+      for (i = 1; i < lC; i++)
+      {
+        GEN c = gel(C,i);
+        check_t(H, addii(B, mulii(c,s)), abN, a1, b1, r, rp, s);
+      }
+    }
+    j = 1-j;
+    q = dvmdii(a0, a1, &c);
+    if (j == 1 && !signe(c)) { q = subiu(q,1); c = a1; }
+    a0 = a1; a1 = c;
+    c = subii(b0, mulii(q,b1));
+    b0 = b1; b1 = c;
+    c = modii(subii(c0, mulii(q,c1)), s);
+    c0 = c1; c1 = c;
+  }
+  return gerepileupto(av, GEN_hash_keys(H));
+}
