@@ -1,0 +1,7 @@
+[1, 66, 196, 456, 2926, 12936]
+[19, 84, 539, 1254, 3724, 245784]
+[1, 72, 143, 924, 2912, 10296]
+[28, 99, 312, 2016, 4004, 288288]
+[2, 352, 702, 2277, 14352, 123552]
+[23, 198, 1248, 4048, 8073, 1420848]
+Total time spent: 0
