@@ -167,6 +167,7 @@ BA   67- new GP functions hyperellratpoints and ellratpoints based on
      69- [libpari] RgX_mulhigh_i
      70- GP function znchargauss
      71- Configure --graphic=svg
+     72- GP function divisorslenstra (divisors in residue classes)
 
   Changed
       1- rewrite bnfnarrow
